# graph-neural-networks

./: .gitignore
deep-learning/: README.md  main.py  models.md  requirements.txt  sit.md  train_all.sh
deep-learning/src/: co_teaching.py  conv.py  file_util.py  hyper_params.py  loadData.py  loss.py  mix_up_augmentation.py  mix_up_utils.py  model_support.py  models.py  teaching.py  utils.py
neural-networks/: .gitignore  IMPLEMENTATION_OVERVIEW.md  PAPER_SUMMARY.md  README.md  TUTORIAL.md  __init__.py  examples.py  gnn_with_pearl.py  pearl.py  pyproject.toml  quickstart.py  requirements.txt  train.py  utils.py
pearl-gnn/: .gitignore  PEARL & Positional Encodings in Graph Neural Networks.pptx  PEARL_Training_Notebook.ipynb  README.md  pearl.ipynb  pyproject.toml
pearl-gnn/logs/: pearl-basis-240ep-zinc.txt  pearl-random-67ep-zinc.txt
pearl-gnn/script/: main.py  main_deepl.py  main_train.py  main_zinc.py
pearl-gnn/src/pearl_gnn/: __init__.py  client.py  hyper_param.py  load_dataset.py  load_deepl.py  load_zinc.py  trainer.py  training.py  visualize.py
pearl-gnn/src/pearl_gnn/dataset/: load_deepl.py  load_zinc.py
pearl-gnn/src/pearl_gnn/helper/: log_service.py  visualize.py
pearl-gnn/src/pearl_gnn/model/: gin.py  gine.py  mlp.py  model_factory.py  model_support.py  pe.py  pearl.py
pearl-gnn/tests/: gin_test.py  model_test.py  test_load_zinc.py
