[project]
name = "neural-networks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.7.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "tqdm>=4.65.0",
]
