[project]
name = "pearl-gnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fabio Massimo Ercoli", email = "fabiomassimo.ercoli@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
]

[project.scripts]
pearl-gnn = "pearl_gnn:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
